Adicionando codigo javascript para corrigir erro de abertura de navegador

--- a/paginas/produto_page4.html
+++ b/paginas/produto_page4.html
@@ -85,9 +85,16 @@
 
     <script>
         function navarrumado(){
-            navhome.style.display='none'
-            navparceiros.style.display='none'
-        }
+                if(window.innerWidth>=769){
+                    navhome.style.display='none'
+                    navparceiros.style.display='none'
+                }
+                else{
+                    navproduto.style.display='none'
+                    navparceiros.style.display='none'
+                    navhome.style.display='none'
+                }
+            }
             function navA1(){
                 if(window.innerWidth>=769){
                     if(navhome.style.display=='none'){
@@ -178,9 +185,17 @@
         function mudouTamanho(){
             if(window.innerWidth>=769){
                 itens.style.display='flex'
-                navhome.style.display='none'
                 navproduto.style.display='none'
                 navparceiros.style.display='none'
+                
+                navhome.style.display='flex'
+
+                navA.style.background='red'
+                navA.style.color='white'
+                navB.style.background=''
+                navB.style.color=''
+                navC.style.background=''
+                navC.style.color=''
             }
             else{
                 itens.style.display='none'
