--- a/paginas/processos.html
+++ b/paginas/processos.html
@@ -68,9 +68,16 @@
 
     <script>
         function navarrumado(){
-            navproduto.style.display='none'
-            navparceiros.style.display='none'
-        }
+                if(window.innerWidth>=769){
+                    navproduto.style.display='none'
+                    navparceiros.style.display='none'
+                }
+                else{
+                    navproduto.style.display='none'
+                    navparceiros.style.display='none'
+                    navhome.style.display='none'
+                }
+            }
         
         function navA1(){
                 if(window.innerWidth>=769){
@@ -161,9 +168,17 @@
         function mudouTamanho(){
             if(window.innerWidth>=769){
                 itens.style.display='flex'
-                navhome.style.display='none'
                 navproduto.style.display='none'
                 navparceiros.style.display='none'
+                
+                navhome.style.display='flex'
+
+                navA.style.background='red'
+                navA.style.color='white'
+                navB.style.background=''
+                navB.style.color=''
+                navC.style.background=''
+                navC.style.color=''
             }
             else{
                 itens.style.display='none'
