--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MEGG wOrmhOle</title>
+    <title>MEGG wOrmhOle/Vídeo MEGG wOrmhOle</title>
     <link rel="shortcut icon" href="paginas/imagens/Logo/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="paginas/estilo/style.css" media="screen">
     <link rel="stylesheet" href="paginas/estilo/print.css" media="print">
@@ -23,7 +23,7 @@
         <nav id="itens" class="navprincipal">
             <img src="paginas/imagens/Logo/logo.png" alt="Logo">
             <div>
-                <p onclick="navA1()" id="navA" class="atual">Home &#9776;</p>
+                <p onclick="navA1()" id="navA">Home &#9776;</p>
                 <p onclick="navA2()" id="navB">Produtos &#9776;</p>
                 <p onclick="navA3()" id="navC">Docs para Investidores &#9776;</p>
                 <a href="paginas/sobre.html">Sobre Nós</a>
@@ -39,7 +39,7 @@
             <a href="paginas/produto_page6.html">Equipamentos</a>
         </nav>
         <nav class="navbar" id="navhome">
-            <a href="#" class="atual">Vídeo de Apresentação</a>
+            <a href="#" class="atual">Vídeo MEGG wOrmhOle</a>
             <a href="paginas/sistema.html">MEGG wOrmhOle System</a>
             <a href="paginas/diferenciais.html">Diferenciais</a>
             <a href="paginas/processos.html">Processo de Montagem</a>
@@ -86,7 +86,7 @@
                         navproduto.style.display='none'
                         navparceiros.style.display='none'
 
-                        navA.style.background='red'
+                        navA.style.background='darkred'
                         navA.style.color='white'
                         navB.style.background = '';
                         navB.style.color = '';
@@ -111,7 +111,7 @@
 
                         navA.style.background=''
                         navA.style.color=''
-                        navB.style.background='red'
+                        navB.style.background='darkred'
                         navB.style.color='white'
                         navC.style.background=''
                         navC.style.color=''
@@ -136,7 +136,7 @@
                         navA.style.color=''
                         navB.style.background=''
                         navB.style.color=''
-                        navC.style.background='red'
+                        navC.style.background='darkred'
                         navC.style.color='white'
                     }
                 }
@@ -173,7 +173,7 @@
                 
                 navhome.style.display='flex'
 
-                navA.style.background='red'
+                navA.style.background='darkred'
                 navA.style.color='white'
                 navB.style.background=''
                 navB.style.color=''
