--- a/paginas/produto_page6.html
+++ b/paginas/produto_page6.html
@@ -33,7 +33,7 @@
             <a href="#" class="atual">Equipamentos</a>
         </nav>
         <nav class="navbar" id="navhome">
-            <a href="../home.html">Vídeo de Apresentação</a>
+            <a href="../home.html">Vídeo MEGG wOrmhOle</a>
             <a href="sistema.html">MEGG wOrmhOle System</a>
             <a href="diferenciais.html">Diferenciais</a>
             <a href="processos.html">Processo de Montagem</a>
