Atualização do site

--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
         <nav id="itens" class="navprincipal">
             <img src="paginas/imagens/Logo/logo.png" alt="Logo">
             <div>
-                <p onclick="navA1()" id="navA">Home &#9776;</p>
+                <p onclick="navA1()" id="navA" class="atual">Home &#9776;</p>
                 <p onclick="navA2()" id="navB">Produtos &#9776;</p>
                 <p onclick="navA3()" id="navC">Docs para Investidores &#9776;</p>
                 <a href="paginas/sobre.html">Sobre Nós</a>
@@ -62,7 +62,7 @@
     
 
         <div class="vid">
-            <video autoplay loop muted controls>
+            <video autoplay loop controls>
                 <source src="paginas/video/00_Ads_Site.mp4" type="video/mp4">
             </video>
         </div>
