--- a/home.html
+++ b/home.html
@@ -62,7 +62,7 @@
     
 
         <div class="vid">
-            <video autoplay loop controls>
+            <video autoplay muted loop controls>
                 <source src="paginas/video/00_Ads_Site.mp4" type="video/mp4">
             </video>
         </div>
