--- a/paginas/videomvp.html
+++ b/paginas/videomvp.html
@@ -19,7 +19,7 @@
             <div>
                 <p onclick="navA1()" id="navA">Home &#9776;</p>
                 <p onclick="navA2()" id="navB">Produtos &#9776;</p>
-                <p onclick="navA3()" id="navC" class="atual">Docs para Investidores &#9776;</p>
+                <p onclick="navA3()" id="navC">Docs para Investidores &#9776;</p>
                 <a href="sobre.html">Sobre Nós</a>
                 <a href="fale.html">Fale Conosco</a>
             </div>
@@ -67,6 +67,8 @@
                 if(window.innerWidth>=769){
                     navproduto.style.display='none'
                     navhome.style.display='none'
+                    navC.style.background='darkred'
+                    navC.style.color='white'
                 }
                 else{
                     navproduto.style.display='none'
