atualização de css e ajustes de html

--- a/paginas/diferenciais.html
+++ b/paginas/diferenciais.html
@@ -56,14 +56,15 @@
     
 
     <main>
-        <h1>Diferenciais</h1>
-        <p>Além dos "10 diferenciais" apresentados na aba anterior, talvez o nosso maior diferencial seja em relação à concorrência:</p>
+        <h1>Diferenciais do MEGG wOrmhOle</h1>
+        <p>Além dos "10 diferenciais" apresentados na aba anterior, também temos o maior diferencial em relação à concorrência:</p>
         <ol>
             <li>Sistema patenteável de produto 1&#41;;</li>
             <li>Sistema patenteável de processo de montagem 1&#41;;</li>
             <li>Sistema patenteável de processo de fabricação 1&#41;;</li>
         </ol>
         <p><strong>Obs.: </strong>1&#41; Vide pedidos de patente na aba <a href="parceiros.html" rel="nofollow">"Docs para Investidores"</a>.</p>
+        
     </main>
 
     <script>
