--- a/paginas/pitchdeck.html
+++ b/paginas/pitchdeck.html
@@ -57,7 +57,7 @@
  
     <main>
         <h1>Pitch Deck do MEGG wOrmhOle System</h1>
-        <a href="pdf/investidores/_Pitch deck worm PDF.pdf" rel="nofollow">Pitch Deck</a>
+        <a href="pdf/investidores/_Pitch deck worm PDF.pdf" rel="nofollow" class="unico">Pitch Deck</a>
     </main>
 
 
