--- a/paginas/produto_page4.html
+++ b/paginas/produto_page4.html
@@ -65,8 +65,8 @@
             <li>Saco de 25 kg;</li>
             <li>Cor conforme a cor dos Blocos;</li>
             <li>1 kg de material seco corresponde a 0,5 litros de graute pronto para aplicação;</li>
-            <li>Ficha técnica <a href="#">[link]</a>;</li>
-            <li>Ficha de informação de segurança do produto químico [link].</li>
+            <li>Ficha técnica;</li>
+            <li>Ficha de informação de segurança do produto químico;</li>
         </ul>
         <p>Nota: A garantia de funcionamento do MEGG wOrmhOle System está relacionada à utilização dos Materias Aderents MEGG wOrmhOle especificados abaixo:</p>
 
@@ -80,7 +80,7 @@
 
 
         <h1>Códigos de Identificação</h1>
-        <p>MEEG-M1-Cz</p>
+        <p>MEGG-M1-Cz</p>
     </main>
 
     <script>
