--- a/paginas/solucaoproblemas.html
+++ b/paginas/solucaoproblemas.html
@@ -56,7 +56,7 @@
     
 
     <main>
-        <h1>Solução dos Problemas</h1>
+        <h1>Solução dos Problemas do MEGG wOrmhOle</h1>
 
         <ol>
             <li>Assentamento tradicional trabalhoso dos blocos com argamassa;</li>
