--- a/paginas/solucoes.html
+++ b/paginas/solucoes.html
@@ -56,7 +56,7 @@
     
 
     <main>
-        <h1>Soluções de Montagem</h1>
+        <h1>Soluções de Montagem do MEGG wOrmhOle</h1>
         <table>
             <colgroup>
                 <col class="cdesc">
