--- a/paginas/valor.html
+++ b/paginas/valor.html
@@ -56,7 +56,7 @@
     
 
     <main>
-        <h1>Valor Agregado</h1>
+        <h1>Valor Agregado do MEGG wOrmhOle</h1>
         <ul>
             <li>Redução da mão de obra e dos materiais, ferramentas e dispositivos para a execução;</li>
             <li> Redução de processos trabalhosos, administração, espaço de armazenagem, espaço para preparação, prazos de validade dos
