--- a/paginas/videomvp.html
+++ b/paginas/videomvp.html
@@ -45,7 +45,7 @@
             <a href="parceiros.html">Pedidos de Patente</a>
             <a href="pitchdeck.html">Pitch Deck</a>
             <a href="onepager.html">One Pager</a>
-            <a href="#" class="atual">Vídeo de MVP</a>
+            <a href="#" class="atual">Vídeo do MVP</a>
             <a href="trl.html">TRL</a>
             <a href="valoracao.html">Valoração</a>
         </nav>
@@ -55,9 +55,7 @@
     </header>
     
  
-    <main>
-        <h1>Vídeo de MVP do MEGG wOrmhOle System</h1>
-    </main>
+    
         <div class="mvp">
             <video src="video/00_MVP_Site.mp4" controls  type="video/mp4"></video>
         </div>
