ajuste no navegador

--- a/home.html
+++ b/home.html
@@ -51,7 +51,7 @@
             <a href="paginas/parceiros.html">Pedidos de Patente</a>
             <a href="paginas/pitchdeck.html">Pitch Deck</a>
             <a href="paginas/onepager.html">One Pager</a>
-            <a href="paginas/videomvp.html">Vídeo de MVP</a>
+            <a href="paginas/videomvp.html">Vídeo do MVP</a>
             <a href="paginas/trl.html">TRL</a>
             <a href="paginas/valoracao.html">Valoração</a>
         </nav>
