--- a/paginas/diferenciais.html
+++ b/paginas/diferenciais.html
@@ -35,7 +35,7 @@
         <nav class="navbar" id="navhome">
             <a href="../home.html">Vídeo MEGG wOrmhOle</a>
             <a href="sistema.html">MEGG wOrmhOle System</a>
-            <a href="#" class="atual">Diferenciais</a>
+            <a href="diferenciais.html">Diferenciais</a>
             <a href="processos.html">Processo de Montagem</a>
             <a href="solucaoproblemas.html">Solução dos Problemas</a>
             <a href="valor.html">Valor Agregado</a>
@@ -45,7 +45,7 @@
             <a href="parceiros.html">Pedidos de Patente</a>
             <a href="pitchdeck.html">Pitch Deck</a>
             <a href="onepager.html">One Pager</a>
-            <a href="videomvp.html">Vídeo de MVP</a>
+            <a href="videomvp.html" class="atual">Vídeo do MVP</a>
             <a href="trl.html">TRL</a>
             <a href="valoracao.html">Valoração</a>
         </nav>
