--- a/paginas/pitchdeck.html
+++ b/paginas/pitchdeck.html
@@ -43,9 +43,9 @@
         </nav>
         <nav class="navbar" id="navparceiros">
             <a href="parceiros.html">Pedidos de Patente</a>
-            <a href="#" class="atual">Pitch Deck</a>
+            <a href="pitchdeck.html">Pitch Deck</a>
             <a href="onepager.html">One Pager</a>
-            <a href="videomvp.html">Vídeo de MVP</a>
+            <a href="videomvp.html" class="atual">Vídeo do MVP</a>
             <a href="trl.html">TRL</a>
             <a href="valoracao.html">Valoração</a>
         </nav>
