--- a/paginas/produto_page4.html
+++ b/paginas/produto_page4.html
@@ -28,7 +28,7 @@
             <a href="produto_page1.html">Blocos</a>
             <a href="produto_page2.html">Esquadrilhas</a>
             <a href="produto_page3.html">Caixas</a>
-            <a href="#" class="atual">Material Aderente</a>
+            <a href="produto_page4.html">Material Aderente</a>
             <a href="produto_page5.html">Dispositivos</a>
             <a href="produto_page6.html">Equipamentos</a>
         </nav>
@@ -45,7 +45,7 @@
             <a href="parceiros.html">Pedidos de Patente</a>
             <a href="pitchdeck.html">Pitch Deck</a>
             <a href="onepager.html">One Pager</a>
-            <a href="videomvp.html">Vídeo de MVP</a>
+            <a href="videomvp.html" class="atual">Vídeo do MVP</a>
             <a href="trl.html">TRL</a>
             <a href="valoracao.html">Valoração</a>
         </nav>
