--- a/paginas/sobre.html
+++ b/paginas/sobre.html
@@ -20,6 +20,8 @@
                 <p onclick="navA1()" id="navA">Home &#9776;</p>
                 <p onclick="navA2()" id="navB">Produtos &#9776;</p>
                 <p onclick="navA3()" id="navC">Docs para Investidores &#9776;</p>
+                <a href="sobre.html">Sobre Nós</a>
+                <a href="fale.html">Fale Conosco</a>
             </div>
         </nav>
         <nav class="navbar" id="navproduto">
@@ -38,14 +40,12 @@
             <a href="solucaoproblemas.html">Solução dos Problemas</a>
             <a href="valor.html">Valor Agregado</a>
             <a href="solucoes.html">Soluções de Montagem</a>
-            <a href="#" class="atual">Sobre Nós</a>
-            <a href="fale.html">Fale Conosco</a>
         </nav>
         <nav class="navbar" id="navparceiros">
             <a href="parceiros.html">Pedidos de Patente</a>
             <a href="pitchdeck.html">Pitch Deck</a>
             <a href="onepager.html">One Pager</a>
-            <a href="videomvp.html">Vídeo de MVP</a>
+            <a href="videomvp.html" class="atual">Vídeo do MVP</a>
             <a href="trl.html">TRL</a>
             <a href="valoracao.html">Valoração</a>
         </nav>
