--- a/paginas/solucaoproblemas.html
+++ b/paginas/solucaoproblemas.html
@@ -37,7 +37,7 @@
             <a href="sistema.html">MEGG wOrmhOle System</a>
             <a href="diferenciais.html">Diferenciais</a>
             <a href="processos.html">Processo de Montagem</a>
-            <a href="#" class="atual">Solução dos Problemas</a>
+            <a href="solucaoproblemas.html">Solução dos Problemas</a>
             <a href="valor.html">Valor Agregado</a>
             <a href="solucoes.html">Soluções de Montagem</a>
         </nav>
@@ -45,7 +45,7 @@
             <a href="parceiros.html">Pedidos de Patente</a>
             <a href="pitchdeck.html">Pitch Deck</a>
             <a href="onepager.html">One Pager</a>
-            <a href="videomvp.html">Vídeo de MVP</a>
+            <a href="videomvp.html" class="atual">Vídeo do MVP</a>
             <a href="trl.html">TRL</a>
             <a href="valoracao.html">Valoração</a>
         </nav>
