--- a/paginas/videomvp.html
+++ b/paginas/videomvp.html
@@ -45,7 +45,7 @@
             <a href="parceiros.html">Pedidos de Patente</a>
             <a href="pitchdeck.html">Pitch Deck</a>
             <a href="onepager.html">One Pager</a>
-            <a href="#" class="atual">Vídeo do MVP</a>
+            <a href="videomvp.html" class="atual">Vídeo do MVP</a>
             <a href="trl.html">TRL</a>
             <a href="valoracao.html">Valoração</a>
         </nav>
@@ -60,6 +60,7 @@
             <video src="video/00_MVP_Site.mp4" controls  type="video/mp4"></video>
         </div>
 
+        
         <script>
             function navarrumado(){
                 navproduto.style.display='none'
