--- a/paginas/fale.html
+++ b/paginas/fale.html
@@ -21,7 +21,7 @@
                 <p onclick="navA2()" id="navB">Produtos &#9776;</p>
                 <p onclick="navA3()" id="navC">Docs para Investidores &#9776;</p>
                 <a href="sobre.html">Sobre Nós</a>
-                <a href="fale.html">Fale Conosco</a>
+                <a href="#" class="atual">Fale Conosco</a>
             </div>
         </nav>
         <nav class="navbar" id="navproduto">
@@ -45,7 +45,7 @@
             <a href="parceiros.html">Pedidos de Patente</a>
             <a href="pitchdeck.html">Pitch Deck</a>
             <a href="onepager.html">One Pager</a>
-            <a href="videomvp.html" class="atual">Vídeo do MVP</a>
+            <a href="videomvp.html">Vídeo do MVP</a>
             <a href="trl.html">TRL</a>
             <a href="valoracao.html">Valoração</a>
         </nav>
