--- a/paginas/onepager.html
+++ b/paginas/onepager.html
@@ -44,8 +44,8 @@
         <nav class="navbar" id="navparceiros">
             <a href="parceiros.html">Pedidos de Patente</a>
             <a href="pitchdeck.html">Pitch Deck</a>
-            <a href="onepager.html">One Pager</a>
-            <a href="videomvp.html" class="atual">Vídeo do MVP</a>
+            <a href="#" class="atual">One Pager</a>
+            <a href="videomvp.html">Vídeo do MVP</a>
             <a href="trl.html">TRL</a>
             <a href="valoracao.html">Valoração</a>
         </nav>
