--- a/paginas/parceiros.html
+++ b/paginas/parceiros.html
@@ -42,10 +42,10 @@
             <a href="solucoes.html">Soluções de Montagem</a>
         </nav>
         <nav class="navbar" id="navparceiros">
-            <a href="parceiros.html">Pedidos de Patente</a>
+            <a href="#" class="atual">Pedidos de Patente</a>
             <a href="pitchdeck.html">Pitch Deck</a>
             <a href="onepager.html">One Pager</a>
-            <a href="videomvp.html" class="atual">Vídeo do MVP</a>
+            <a href="videomvp.html">Vídeo do MVP</a>
             <a href="trl.html">TRL</a>
             <a href="valoracao.html">Valoração</a>
         </nav>
