--- a/paginas/diferenciais.html
+++ b/paginas/diferenciais.html
@@ -56,7 +56,7 @@
     
 
     <main>
-        <h1>Diferenciais do MEGG wOrmhOle</h1>
+        <h1>Outros Diferenciais</h1>
         <p>Além dos "10 diferenciais" apresentados na aba anterior, também temos o maior diferencial em relação à concorrência:</p>
         <ol>
             <li>Sistema patenteável de produto 1&#41;;</li>
