--- a/paginas/processos.html
+++ b/paginas/processos.html
@@ -64,9 +64,11 @@
             <li>Injeção de material aderente somente nas juntas de aderência da parede pré-montada;</li>
         </ol>
         <p>Resultado: Com exceção do piso e da laje, o pavimento fica finalizado, ou seja, com pintura, revestimentos, rodapés, portas, janelas, caixas embutidas, etc.</p>
-        <div class="imaggraf">    
-            <img src="imagens/Graficos/Imagem3.png" alt="Grafico de Montagem 001">
-        </div>
+        <picture class="imaggraf">
+            <img src="imagens/Graficos/Imagem1.png" alt="Processos de Montagem 001" class="imageA">
+            <img src="imagens/Graficos/Imagem2.png" alt="Processos de Montagem 002" class="imageA">
+            <img src="imagens/Graficos/Imagem3.png" alt="Processos de Montagem 003" class="imageB">
+        </picture>
     </main>
 
     <script>
