--- a/paginas/processos.html
+++ b/paginas/processos.html
@@ -67,7 +67,8 @@
         <picture class="imaggraf">
             <img src="imagens/Graficos/Imagem1.png" alt="Processos de Montagem 001" class="imageA">
             <img src="imagens/Graficos/Imagem2.png" alt="Processos de Montagem 002" class="imageA">
-            <img src="imagens/Graficos/Imagem3.png" alt="Processos de Montagem 003" class="imageB">
+            <img src="imagens/Graficos/Imagem3.png" alt="Processos de Montagem 003" class="imageA">
+            <img src="imagens/Graficos/Imagem4.png" alt="Processos de Montagem 004" class="imageB">
         </picture>
     </main>
 
