--- a/paginas/processos.html
+++ b/paginas/processos.html
@@ -65,10 +65,14 @@
         </ol>
         <p>Resultado: Com exceção do piso e da laje, o pavimento fica finalizado, ou seja, com pintura, revestimentos, rodapés, portas, janelas, caixas embutidas, etc.</p>
         <picture class="imaggraf">
-            <img src="imagens/Graficos/Imagem1.png" alt="Processos de Montagem 001" class="imageA">
-            <img src="imagens/Graficos/Imagem2.png" alt="Processos de Montagem 002" class="imageA">
-            <img src="imagens/Graficos/Imagem3.png" alt="Processos de Montagem 003" class="imageA">
-            <img src="imagens/Graficos/Imagem4.png" alt="Processos de Montagem 004" class="imageB">
+            <img src="imagens/Graficos/solucao_001.png" alt="Solução 001" class="imageB">
+            <img src="imagens/Graficos/solucao_002.png" alt="Solução 001" class="imageA">
+            <img src="imagens/Graficos/solucao_003.png" alt="Solução 001" class="imageA">
+            <br>
+            <img src="imagens/Graficos/funcionamento_001.png" alt="Processos de Montagem 001" class="imageA">
+            <img src="imagens/Graficos/funcionamento_002.png" alt="Processos de Montagem 002" class="imageA">
+            <img src="imagens/Graficos/funcionamento_003.png" alt="Processos de Montagem 003" class="imageA">
+            <img src="imagens/Graficos/funcionamento_004.png" alt="Processos de Montagem 004" class="imageB">
         </picture>
     </main>
 
