--- a/paginas/processos.html
+++ b/paginas/processos.html
@@ -58,21 +58,23 @@
 
     <main>
         <h1>Processo de Montagem do MEGG wOrmhOle</h1>
+        
         <p>Resumindo o processo de montagem em 2 etapas simples e rápidas:</p>
         <ol>
             <li>Pré-montagem à seco e sem encaixes de todos os elementos ao mesmo tempo, incluindo blocos, portas, janelas, tubulações, eletrodutos, armaduras, etc.;</li>
             <li>Injeção de material aderente somente nas juntas de aderência da parede pré-montada;</li>
         </ol>
         <p>Resultado: Com exceção do piso e da laje, o pavimento fica finalizado, ou seja, com pintura, revestimentos, rodapés, portas, janelas, caixas embutidas, etc.</p>
+
         <picture class="imaggraf">
-            <img src="imagens/Graficos/solucao_001.png" alt="Solução 001" class="imageB">
-            <img src="imagens/Graficos/solucao_002.png" alt="Solução 001" class="imageA">
-            <img src="imagens/Graficos/solucao_003.png" alt="Solução 001" class="imageA">
+            <img src="imagens/Graficos/solucao_001.png" alt="Solução MEGG wOrmhOle System 001" class="imageB">
+            <img src="imagens/Graficos/solucao_002.png" alt="Solução MEGG wOrmhOle System 002" class="imageA">
+            <img src="imagens/Graficos/solucao_003.png" alt="Solução MEGG wOrmhOle System 003" class="imageA">
             <br>
-            <img src="imagens/Graficos/funcionamento_001.png" alt="Processos de Montagem 001" class="imageA">
-            <img src="imagens/Graficos/funcionamento_002.png" alt="Processos de Montagem 002" class="imageA">
-            <img src="imagens/Graficos/funcionamento_003.png" alt="Processos de Montagem 003" class="imageA">
-            <img src="imagens/Graficos/funcionamento_004.png" alt="Processos de Montagem 004" class="imageB">
+            <img src="imagens/Graficos/funcionamento_001.png" alt="Esquema de Funcionamento 001" class="imageA">
+            <img src="imagens/Graficos/funcionamento_002.png" alt="Esquema de Funcionamento 002" class="imageA">
+            <img src="imagens/Graficos/funcionamento_003.png" alt="Esquema de Funcionamento 003" class="imageA">
+            <img src="imagens/Graficos/funcionamento_004.png" alt="Esquema de Funcionamento 004" class="imageB">
         </picture>
     </main>
 
