ajuste no javasctipt

--- a/paginas/produto_page5.html
+++ b/paginas/produto_page5.html
@@ -194,15 +194,7 @@
                 itens.style.display='flex'
                 navproduto.style.display='none'
                 navparceiros.style.display='none'
-                    
-                navhome.style.display='flex'
-    
-                navA.style.background='darkred'
-                navA.style.color='white'
-                navB.style.background=''
-                navB.style.color=''
-                navC.style.background=''
-                navC.style.color=''
+                navhome.style.display='none'
             }
             else{
                 itens.style.display='none'
