ajustes nas imagens

--- a/paginas/processos.html
+++ b/paginas/processos.html
@@ -68,12 +68,10 @@
 
         <picture class="imaggraf">
             <img src="imagens/Graficos/solucao_001.png" alt="Solução MEGG wOrmhOle System 001" class="imageB">
-            <img src="imagens/Graficos/solucao_002.png" alt="Solução MEGG wOrmhOle System 002" class="imageA">
-            <img src="imagens/Graficos/solucao_003.png" alt="Solução MEGG wOrmhOle System 003" class="imageA">
-            <br>
+            <img src="imagens/Graficos/solucao_001.png" alt="Solução MEGG wOrmhOle System 001" class="imageA">
+            <h2>Esquema de Funcionamento</h2>
             <img src="imagens/Graficos/funcionamento_001.png" alt="Esquema de Funcionamento 001" class="imageA">
             <img src="imagens/Graficos/funcionamento_002.png" alt="Esquema de Funcionamento 002" class="imageA">
-            <img src="imagens/Graficos/funcionamento_003.png" alt="Esquema de Funcionamento 003" class="imageA">
             <img src="imagens/Graficos/funcionamento_004.png" alt="Esquema de Funcionamento 004" class="imageB">
         </picture>
     </main>
