atualização dos links

--- a/paginas/solucoes.html
+++ b/paginas/solucoes.html
@@ -97,7 +97,7 @@
                 </tr>
                 <tr>
                     <td>Verga para Porta - Na Terminação da parede</td>
-                    <td><a href="imagens/Produtos/Image Figs/08_Verga para Porta - na Terminação da parede-0.jpg" rel="nofollow">Fig.8</a></td>
+                    <td><a href="imagens/Produtos/Image Figs/08_Verga para Porta - Na Terminação da parede-0.jpg" rel="nofollow">Fig.8</a></td>
                 </tr>
                 <tr>
                     <td>Verga para Janela - Típico</td>
@@ -121,7 +121,7 @@
                 </tr>
                 <tr>
                     <td>Amarração de canaletas U</td>
-                    <td><a href="imagens/Produtos/Image Figs/14_Amarração de Canaletas U-0.jpg" rel="nofollow">Fig.14</a></td>
+                    <td><a href="imagens/Produtos/Image Figs/14_Amarração de canaletas U-0.jpg" rel="nofollow">Fig.14</a></td>
                 </tr>
                 <tr>
                     <td>Amarração de canaletas J</td>
