atualização de texto

--- a/paginas/sobre.html
+++ b/paginas/sobre.html
@@ -58,7 +58,7 @@
 
     <main>
         <h1>Sobre Nós</h1>
-        <p>A wOrmhOle é uma construtech brasileira que está estruturada se estruturando para atuar em todas as regiões do país através do sistema de franquia e/ou licenciamento. </p>
+        <p>A wOrmhOle é uma construtech brasileira que está se estruturando para atuar em todas as regiões do país através do sistema de franquia e/ou licenciamento. </p>
         <p>Estamos à procura de sócios investidores que estejam interessados em investir financeiramente e administrativamente no negócio, agregando conhecimento, experiência, rede de relacionamentos, etc.</p>
         <p>Inicialmente a empresa é composta por 2 sócios, 1 engenheiro mecânico e 1 engenheiro de computação do 4º ano.</p>
 
