--- a/home.html
+++ b/home.html
@@ -63,7 +63,7 @@
     
 
     <div class="vid">
-        <video autoplay muted loop controls>
+        <video autoplay muted loop  playsinline>
             <source src="paginas/video/00_Ads_Site.mp4" type="video/mp4">
         </video>
     </div>
