novo css na pagina inicial

--- a/home.html
+++ b/home.html
@@ -97,5 +97,29 @@
 
         
     </main>
+    <footer>
+        <p>para saber mais clique abaixo</p>
+        <ul>
+            <li>Home</li>
+            <li><a href="paginas/sobre.html">Sobre Nós</a></li>
+            <li><a href="paginas/fale.html">Fale Conosco</a></li>
+        </ul>
+        <ul>
+            <li>Produtos</li>
+            <li><a href="paginas/sobre.html">Sobre Nós</a></li>
+            <li><a href="paginas/fale.html">Fale Conosco</a></li>
+        </ul>
+        <ul>
+            <li>Docs para Investidores</li>
+            <li><a href="paginas/sobre.html">Sobre Nós</a></li>
+            <li><a href="paginas/fale.html">Fale Conosco</a></li>
+            <li><a href="paginas/sobre.html">Sobre Nós</a></li>
+            <li><a href="paginas/fale.html">Fale Conosco</a></li>
+        </ul>
+        <ul>
+            <li><a href="paginas/sobre.html">Sobre Nós</a></li>
+            <li><a href="paginas/fale.html">Fale Conosco</a></li>
+        </ul>
+    </footer>
 </body>
 </html>
