--- a/home.html
+++ b/home.html
@@ -100,17 +100,17 @@
     <footer>
         <p>para saber mais clique abaixo</p>
         <ul>
-            <li>Home</li>
+            <li class="titulo">Home</li>
             <li><a href="paginas/sobre.html">Sobre Nós</a></li>
             <li><a href="paginas/fale.html">Fale Conosco</a></li>
         </ul>
         <ul>
-            <li>Produtos</li>
+            <li class="titulo">Produtos</li>
             <li><a href="paginas/sobre.html">Sobre Nós</a></li>
             <li><a href="paginas/fale.html">Fale Conosco</a></li>
         </ul>
         <ul>
-            <li>Docs para Investidores</li>
+            <li class="titulo">Docs para Investidores</li>
             <li><a href="paginas/sobre.html">Sobre Nós</a></li>
             <li><a href="paginas/fale.html">Fale Conosco</a></li>
             <li><a href="paginas/sobre.html">Sobre Nós</a></li>
