novo css com display flex para o footer da pagina principal

--- a/home.html
+++ b/home.html
@@ -99,27 +99,29 @@
     </main>
     <footer>
         <p>para saber mais clique abaixo</p>
-        <ul>
-            <li class="titulo">Home</li>
-            <li><a href="paginas/sobre.html">Sobre Nós</a></li>
-            <li><a href="paginas/fale.html">Fale Conosco</a></li>
-        </ul>
-        <ul>
-            <li class="titulo">Produtos</li>
-            <li><a href="paginas/sobre.html">Sobre Nós</a></li>
-            <li><a href="paginas/fale.html">Fale Conosco</a></li>
-        </ul>
-        <ul>
-            <li class="titulo">Docs para Investidores</li>
-            <li><a href="paginas/sobre.html">Sobre Nós</a></li>
-            <li><a href="paginas/fale.html">Fale Conosco</a></li>
-            <li><a href="paginas/sobre.html">Sobre Nós</a></li>
-            <li><a href="paginas/fale.html">Fale Conosco</a></li>
-        </ul>
-        <ul>
-            <li><a href="paginas/sobre.html">Sobre Nós</a></li>
-            <li><a href="paginas/fale.html">Fale Conosco</a></li>
-        </ul>
+        <div class="links">
+            <ul>
+                <li class="titulo">Home</li>
+                <li><a href="paginas/sobre.html">Sobre Nós</a></li>
+                <li><a href="paginas/fale.html">Fale Conosco</a></li>
+            </ul>
+            <ul>
+                <li class="titulo">Produtos</li>
+                <li><a href="paginas/sobre.html">Sobre Nós</a></li>
+                <li><a href="paginas/fale.html">Fale Conosco</a></li>
+            </ul>
+            <ul>
+                <li class="titulo">Docs para Investidores</li>
+                <li><a href="paginas/sobre.html">Sobre Nós</a></li>
+                <li><a href="paginas/fale.html">Fale Conosco</a></li>
+                <li><a href="paginas/sobre.html">Sobre Nós</a></li>
+                <li><a href="paginas/fale.html">Fale Conosco</a></li>
+            </ul>
+            <ul>
+                <li><a href="paginas/sobre.html">Sobre Nós</a></li>
+                <li><a href="paginas/fale.html">Fale Conosco</a></li>
+            </ul>
+        </div>
     </footer>
 </body>
 </html>
