--- a/home.html
+++ b/home.html
@@ -64,51 +64,29 @@
     </div>
 
     <main>
-        <h1>MEGG wOrmhOle System</h1>
-
-        <h2>O que é MEGG?</h2>
-        <p>MEGG é a abreviação de Modular Elements Grouted in Group (Elementos Modulares Grauteados em Grupo).</p>
-
-        <h2>O que é MEGG wOrmhOle System?</h2>
-        <p>O MEGG wOrmhOle System é um sistema que inova o bloco estrutural aparente e a construção modular tradicional introduzindo 10 novos conceitos <strong>diferenciais</strong> de construção:</p>
-
-        <h2>10 Diferenciais</h2>
-        <ol>
-            <li> Construção modular em nível dos menores elementos, compreendendo blocos
-                modulares para paredes, blocos modulares para pilares (fora das paredes),
-                blocos modulares para vigas, portas modulares, janelas modulares, caixas
-                modulares;</li>
-            <li>Módulos manuseáveis;</li>
-            <li>Design modular M10 com dimensões modulares reais, ou seja, sem diminuição de 1 cm nas dimensões nominais, e com tolerâncias dimensionais e geométricas menores do que 1 mm;</li>
-            <li>Design projetado com meios para serem aderidos em grupo;</li>
-            <li>Sistema completo, compreendendo todos os tipos de blocos <a href="solucoes.html" rel="nofollow">(vide aba "Soluções de Montagem")</a>, portas, janelas, caixas e qualquer outro objeto modular necessário para a parede de uma edificação;</li>
-           <li>Processo de pré-montagem à seco e sem nenhum tipo de encaixe, apenas por sobreposição e justaposição, que permite nivelamento, alinhamento e prumo, muito fácil e eficiente;</li>
-           <li>Sistema de aderência através da injeção de material aderente somente nas juntas
-            de aderência: muito prático, rápido e limpo, e a parede continua oca, ou seja,
-            leve e sem desperdício de material de grauteamento;</li>
-           <li>Blocos com acabamento final direto da fábrica, compreendendo
-            impermeabilização incorporada à massa do bloco, blocos na cor natural ou com
-            pintura, revestimento, rodapé, blocos com caixinhas elétricas, etc;</li>
-           <li>Blocos com rasgos para passagem de armaduras, tubulações e conduítes, nas
-            direções horizontais e verticais;</li>
-           <li> Parede e fachada com vida útil de 100 anos (ainda necessita de investimento em
-            testes comprobatórios);</li>
-        </ol>
-
-        
+        <h1>texto</h1>
+        <p>texto</p>
     </main>
     <footer>
         <p>para saber mais clique abaixo</p>
         <div class="links">
             <ul>
                 <li class="titulo">Home</li>
-                <li><a href="paginas/sobre.html">Sobre Nós</a></li>
-                <li><a href="paginas/fale.html">Fale Conosco</a></li>
+                <li><a href="paginas/sistema.html">MEGG wOrmhOle System</a></li>
+                <li><a href="paginas/diferenciais.html">Diferenciais</a></li>
+                <li><a href="paginas/processos.html">Processo de Montagem</a></li>
+                <li><a href="paginas/solucaoproblemas.html">Solução dos Problemas</a></li>
+                <li><a href="paginas/valor.html">Valor Agregado</a></li>
+                <li><a href="paginas/solucoes.html">Soluções de Montagem</a></li>
             </ul>
             <ul>
                 <li class="titulo">Produtos</li>
-                <li><a href="paginas/sobre.html">Sobre Nós</a></li>
-                <li><a href="paginas/fale.html">Fale Conosco</a></li>
+                <li><a href="paginas/produto_page1.html">Blocos</a></li>
+                <li><a href="paginas/produto_page2.html">Esquadrilhas</a></li>
+                <li><a href="paginas/produto_page3.html">Caixas</a></li>
+                <li><a href="paginas/produto_page4.html">Material Aderente</a></li>
+                <li><a href="paginas/produto_page5.html">Dispositivos</a></li>
+                <li><a href="paginas/produto_page6.html">Equipamentos</a></li>
             </ul>
             <ul>
                 <li class="titulo">Docs para Investidores</li>
