adicionando os links para finalizar o footer

--- a/home.html
+++ b/home.html
@@ -90,10 +90,12 @@
             </ul>
             <ul>
                 <li class="titulo">Docs para Investidores</li>
-                <li><a href="paginas/sobre.html">Sobre Nós</a></li>
-                <li><a href="paginas/fale.html">Fale Conosco</a></li>
-                <li><a href="paginas/sobre.html">Sobre Nós</a></li>
-                <li><a href="paginas/fale.html">Fale Conosco</a></li>
+                <li><a href="paginas/parceiros.html">Pedidos de Patente</a></li>
+                <li><a href="paginas/pitchdeck.html">Pitch Deck</a></li>
+                <li><a href="paginas/onepager.html">One Pager</a></li>
+                <li><a href="paginas/videomvp.html">Vídeo do MVP</a></li>
+                <li><a href="paginas/trl.html">TRL</a></li>
+                <li><a href="paginas/valoracao.html">Valoração</a></li>
             </ul>
             <ul>
                 <li><a href="paginas/sobre.html">Sobre Nós</a></li>
