Atualização de css

--- a/home.html
+++ b/home.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="paginas/estilo/style.css" media="screen">
     <link rel="stylesheet" href="paginas/estilo/print.css" media="print">
     <script src="paginas/javascript/codigo.js"></script>
+    <style>
+        div.vid{
+            background-image: linear-gradient(to bottom, whitesmoke,darkred);
+        }
+    </style>
    
 </head>
 <body onresize="mudouTamanho()" onload="navarrumado()">
