atualização dos links

--- a/home.html
+++ b/home.html
@@ -99,8 +99,8 @@
                 <li><a href="paginas/valoracao.html">Valoração</a></li>
             </ul>
             <ul>
-                <li><a href="paginas/sobre.html">Sobre Nós</a></li>
-                <li><a href="paginas/fale.html">Fale Conosco</a></li>
+                <li class="titulo"><a href="paginas/sobre.html">Sobre Nós</a></li>
+                <li class="titulo"><a href="paginas/fale.html">Fale Conosco</a></li>
             </ul>
         </div>
     </footer>
