correção de texto

--- a/paginas/produto_page1.html
+++ b/paginas/produto_page1.html
@@ -57,7 +57,7 @@
     
   
     <main>
-        <h1>Blocos MEGG wOrmhOle</h1>
+        <h1>Blocos Estruturais Aparentes MEGG wOrmhOle</h1>
         <table>
             <colgroup>
                 <col class="ccod">
