--- a/paginas/sistema.html
+++ b/paginas/sistema.html
@@ -74,7 +74,7 @@
             <li>Módulos manuseáveis;</li>
             <li>Design modular M10 com dimensões modulares reais, ou seja, sem diminuição de 1 cm nas dimensões nominais, e com tolerâncias dimensionais e geométricas menores do que 1 mm;</li>
             <li>Design projetado com meios para serem aderidos em grupo;</li>
-            <li>Sistema completo, compreendendo todos os tipos de blocos <a href="solucoes.html" rel="nofollow">(vide aba "Soluções de Montagem")</a>, portas, janelas, caixas e qualquer outro objeto modular necessário para a parede de uma edificação;</li>
+            <li>Sistema completo, compreendendo todos os tipos de blocos estruturais aparentes <a href="solucoes.html" rel="nofollow">(vide aba "Soluções de Montagem")</a>, portas, janelas, caixas e qualquer outro objeto modular necessário para a parede de uma edificação;</li>
            <li>Processo de pré-montagem à seco e sem nenhum tipo de encaixe, apenas por sobreposição e justaposição, que permite nivelamento, alinhamento e prumo, muito fácil e eficiente;</li>
            <li>Sistema de aderência através da injeção de material aderente somente nas juntas
             de aderência: muito prático, rápido e limpo, e a parede continua oca, ou seja,
