Mudando os videos

--- a/home.html
+++ b/home.html
@@ -63,8 +63,8 @@
     
 
     <div class="vid">
-        <video autoplay muted loop  playsinline controls>
-            <source src="paginas/video/00_Ads_Site.mp4" type="video/mp4">
+        <video loop  playsinline controls>
+            <source src="paginas/video/00_MVP_Site.mp4" controls  type="video/mp4"></source>
         </video>
     </div>
 
