--- a/paginas/videomvp.html
+++ b/paginas/videomvp.html
@@ -58,7 +58,7 @@
  
     
         <div class="mvp">
-            <video src="video/00_MVP_Site.mp4" controls  type="video/mp4"></video>
+            <video src="video/00_Ads_Site.mp4" type="video/mp4" loop autoplay muted playsinline controls></video>
         </div>
 
 </body>
