atualização de css

--- a/home.html
+++ b/home.html
@@ -63,7 +63,7 @@
     
 
     <div class="vid">
-        <img id="imgcapa" class="capa" src="paginas/imagens/Teste.png" alt="Imagem de Capa">
+        <img id="imgcapa" class="capa" src="paginas/imagens/Capa.png" alt="Imagem de Capa">
         <video playsinline controls id="vidprincipal">
             <source src="paginas/video/00_MVP_Site.mp4"  type="video/mp4"></source>
         </video>
