--- a/paginas/solucoes.html
+++ b/paginas/solucoes.html
@@ -86,11 +86,11 @@
                 </tr>
                 <tr>
                     <td>Amarração de ombreira de vão Alinhado à parede</td>
-                    <td><a href="imagens/Produtos/Image Figs/05_Ombreira de vão de Alinhado à parede-0.jpg" rel="nofollow">Fig.5</a></td>
+                    <td><a href="imagens/Produtos/Image Figs/05_Ombreira com vão fora do canto da parede-0.jpg" rel="nofollow">Fig.5</a></td>
                 </tr>
                 <tr>
                     <td>Amarração de ombreira de vão Transversal à parede</td>
-                    <td><a href="imagens/Produtos/Image Figs/06_Ombreira de vão Transversal à parede-0.jpg" rel="nofollow">Fig.6</a></td>
+                    <td><a href="imagens/Produtos/Image Figs/06_Ombreira com vão no canto da parede-0.jpg" rel="nofollow">Fig.6</a></td>
                 </tr>
                 <tr>
                     <td>Verga para Porta - Típico</td>
