--- a/paginas/pitchdeck.html
+++ b/paginas/pitchdeck.html
@@ -58,7 +58,7 @@
  
     <main>
         <h1>Pitch Deck do MEGG wOrmhOle System</h1>
-        <a href="pdf/investidores/_Pitch deck worm PDF.pdf" rel="nofollow" class="unico">Pitch Deck</a>
+        <a href="pdf/investidores/_Pitch Deck worm PDF_02.pdf" rel="nofollow" class="unico">Pitch Deck</a>
     </main>
 
 </body>
